crates/wbraster/dev/baselines/jpeg2000_step6l_tiled_native_vs_ref_ll_decode_head_2026-04-20.txt
warning: fields `encoded_codestream` and `uses_openjph_htj2k` are never read
   --> crates/wbjpeg2000/src/lib.rs:151:16
    |
147 | pub struct Image<'a> {
    |            ----- fields in this struct
...
151 |     pub(crate) encoded_codestream: &'a [u8],
    |                ^^^^^^^^^^^^^^^^^^
...
160 |     pub(crate) uses_openjph_htj2k: bool,
    |                ^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: function `copy_raw_bitmap_to_u8` is never used
   --> crates/wbjpeg2000/src/lib.rs:379:4
    |
379 | fn copy_raw_bitmap_to_u8(raw: &RawBitmap, buf: &mut [u8]) {
    |    ^^^^^^^^^^^^^^^^^^^^^

warning: `wbjpeg2000` (lib) generated 2 warnings
warning: unused import: `wbraster::error::RasterError`
    --> crates/wbraster/tests/integration.rs:2069:9
     |
2069 |     use wbraster::error::RasterError;
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `wbraster` (test "integration") generated 1 warning (run `cargo fix --test "integration" -p wbraster` to apply 1 suggestion)
    Finished `test` profile [optimized + debuginfo] target(s) in 0.08s
     Running unittests src/lib.rs (target/debug/deps/wbraster-9ea1ef0c4ad085e8)

running 1 test
[decode_component] component=0 has_explicit_precincts=true num_layers=1 scod=0x01
[decode_component] -> taking decode_component_proper path
[packet_header_align] BEFORE: bit_pos=36 byte_pos=4 bit_offset=4
[packet_header_align] AFTER: byte_pos=5 (segs.len=1)
[packet_header_align] BEFORE: bit_pos=15944 byte_pos=1993 bit_offset=0
[packet_header_align] AFTER: byte_pos=1993 (segs.len=1)
[packet_header_align] BEFORE: bit_pos=20757 byte_pos=2594 bit_offset=5
[packet_header_align] AFTER: byte_pos=2595 (segs.len=1)
[ll_block_ab] num_bp=15 dims=64x32 nnz std=2048 no_sp=2048 no_mr=2048 no_cl=0 legacy=2048
[ll_block_ab] first_nz std=Some((0, -32643)) no_sp=Some((0, -32643)) no_mr=Some((0, -16384)) no_cl=None legacy=Some((0, -907))
[ll_block_ab] head std=[-32643, -32643, -32642, -32641, -32640, -32640, -32639, -32638] no_sp=[-32643, -32643, -32642, -32641, -32640, -32640, -32639, -32638] no_mr=[-16384, -16384, -16384, -16384, -16384, -16384, -16384, -16384] no_cl=[0, 0, 0, 0, 0, 0, 0, 0] legacy=[-907, -24717, -2333, -6351, 12639, -20955, -6619, -22367]
[decode_component] component=1 has_explicit_precincts=true num_layers=1 scod=0x01
[decode_component] -> taking decode_component_proper path
[packet_header_align] BEFORE: bit_pos=36 byte_pos=4 bit_offset=4
[packet_header_align] AFTER: byte_pos=5 (segs.len=1)
[packet_header_align] BEFORE: bit_pos=15944 byte_pos=1993 bit_offset=0
[packet_header_align] AFTER: byte_pos=1993 (segs.len=1)
[packet_header_align] BEFORE: bit_pos=20757 byte_pos=2594 bit_offset=5
[packet_header_align] AFTER: byte_pos=2595 (segs.len=1)
[ll_block_ab] num_bp=11 dims=64x32 nnz std=2048 no_sp=2048 no_mr=2042 no_cl=0 legacy=2044
[ll_block_ab] first_nz std=Some((0, 193)) no_sp=Some((0, -24)) no_mr=Some((0, -64)) no_cl=None legacy=Some((0, -1377))
[ll_block_ab] head std=[193, 133, 128, 197, -197, -134, -133, -132] no_sp=[-24, -48, -96, -96, -104, -104, 192, 200] no_mr=[-64, -64, 32, -64, -64, -64, -8, -128] no_cl=[0, 0, 0, 0, 0, 0, 0, 0] legacy=[-1377, -924, 1126, -530, -1902, -842, -896, 1930]
[decode_component] component=2 has_explicit_precincts=true num_layers=1 scod=0x01
[decode_component] -> taking decode_component_proper path
[packet_header_align] BEFORE: bit_pos=36 byte_pos=4 bit_offset=4
[packet_header_align] AFTER: byte_pos=5 (segs.len=1)
[packet_header_align] BEFORE: bit_pos=15944 byte_pos=1993 bit_offset=0
[packet_header_align] AFTER: byte_pos=1993 (segs.len=1)
[packet_header_align] BEFORE: bit_pos=20757 byte_pos=2594 bit_offset=5
[packet_header_align] AFTER: byte_pos=2595 (segs.len=1)
[ll_block_ab] num_bp=8 dims=64x32 nnz std=2041 no_sp=1975 no_mr=2044 no_cl=0 legacy=2041
[ll_block_ab] first_nz std=Some((0, 2)) no_sp=Some((0, 2)) no_mr=Some((0, 8)) no_cl=None legacy=Some((0, 63))
[ll_block_ab] head std=[2, -2, -26, -4, 14, -6, -103, -18] no_sp=[2, 0, 10, 5, 9, 10, 11, 11] no_mr=[8, -16, -8, -16, 16, -16, -32, -16] no_cl=[0, 0, 0, 0, 0, 0, 0, 0] legacy=[63, 95, -31, 127, 63, -95, 63, -63]
[bridge] Image dimensions: 64x64
[bridge] Color space: RGB
[bridge] Original bit depth: 16
[wbjpeg2000_ll_decode_head] comp=0 res=0 cb=(0, 0) coeff_head=[-32643, -32643, -32642, -32641, -32640, -32640, -32639, -32638, -32627, -32626, -32626, -32625, -32624, -32623, -32623, -32622]
[wbjpeg2000_ll_decode_head] comp=1 res=0 cb=(0, 0) coeff_head=[-200, -200, -200, -200, -200, -200, -200, -200, -136, -136, -136, -136, -136, -136, -136, -136]
[wbjpeg2000_ll_decode_head] comp=2 res=0 cb=(0, 0) coeff_head=[-100, -101, -102, -103, -104, -105, -106, -107, -99, -100, -101, -102, -103, -104, -105, -106]
[wbjpeg2000_ll_decode_head] comp=0 res=0 cb=(0, 0) coeff_head=[-32123, -32123, -32122, -32121, -32120, -32120, -32119, -32118, -32107, -32106, -32106, -32105, -32104, -32103, -32103, -32102]
[wbjpeg2000_ll_decode_head] comp=1 res=0 cb=(0, 0) coeff_head=[1848, 1848, 1848, 1848, 1848, 1848, 1848, 1848, 1912, 1912, 1912, 1912, 1912, 1912, 1912, 1912]
[wbjpeg2000_ll_decode_head] comp=2 res=0 cb=(0, 0) coeff_head=[-68, -69, -70, -71, -72, -73, -74, -75, -67, -68, -69, -70, -71, -72, -73, -74]
[bridge] Raw dimensions: 64x64
[bridge] Raw bytes_per_sample: 2
[bridge] Raw num_components: 3
[bridge] Raw bit_depth: 16
[bridge] Raw data length: 24576
[bridge] 16-bit path: first 10 pixels (component 0): [100.0, 100.0, 100.0, 100.0, 100.0, 100.0, 100.0, 100.0, 100.0, 100.0]
[bridge] 16-bit path: first 10 pixels after correction: [100, 100, 100, 100, 100, 100, 100, 100, 100, 100]
JPEG2000 differential summary: fixtures_total=1 multicomponent_fixtures=1 ok=0 native_error=0 native_unsupported_packet_header_markers=0 native_unsupported_poc=0 bridge_error=0 metadata_mismatch=0 sample_count_mismatch=0 sample_value_mismatch=1 multicomponent_native_error=0 multicomponent_bridge_error=0 multicomponent_metadata_mismatch=0 multicomponent_sample_count_mismatch=0 multicomponent_sample_value_mismatch=1
SAMPLE_VALUE_MISMATCH|tests/fixtures/tiled_rgb_64x64_block32_lossless.jp2|idx=0 band=0 row=0 col=0 pixel=0 native=79 bridge=100 abs_err=21 eps=0
test formats::jpeg2000::differential_tests::jpeg2000_native_vs_bridge_differential_corpus ... ok

test result: ok. 1 passed; 0 failed; 0 ignored; 0 measured; 282 filtered out; finished in 0.01s

     Running tests/integration.rs (target/debug/deps/integration-5f935e281ff4dbda)

running 0 tests

test result: ok. 0 passed; 0 failed; 0 ignored; 0 measured; 80 filtered out; finished in 0.00s

     Running tests/reprojection_parity.rs (target/debug/deps/reprojection_parity-623e1739416b87bb)

running 0 tests

test result: ok. 0 passed; 0 failed; 0 ignored; 0 measured; 2 filtered out; finished in 0.00s

